<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_connection"
            android:icon="@drawable/ic_connection"
            android:title="@string/connection" />

        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/ic_graph"
            android:title="@string/graph" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_24dp"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_information"
                android:icon="@drawable/ic_info_24dp"
                android:title="@string/information" />
        </menu>
    </item>


</menu>
