<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".dialog.SetWattageDialog">

    <TextView
        android:id="@+id/chooseWatt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wattage"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText_watt_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chooseWatt_title"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_device_wattage_or"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_watt_input"
        android:layout_marginTop="16dp"
        android:text="@string/choose_from_below" />

    <TextView
        android:id="@+id/cancel_set_wattage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="51dp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/set_wattage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/set"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

</RelativeLayout>